# chinese-holidays-calendar

./: .editorconfig  .gitignore  README.md  crawler.http  crawler.py  go.mod  go.sum  holiday_llm.prompt  holiday_llm.py  main.go  nlp_llm.py  parser.cabal  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  data.yml  ics.yml
data/: 2013.txt  2014.txt  2015.txt  2016.txt  2017.txt  2018.txt  2019.txt  2020.txt  2021.txt  2022.txt  2023.txt  2024.txt  2025.txt  2026.txt  readme.txt
docs/: CNAME  holiday.ics  index.html  main.ics  rest.ics  work.ics
docs/global/ca_on/: main.ics  rest.ics
global/ca_on/: deploy.sh  main.py
global/ca_on/data/: 2022.txt  2023.txt  2024.txt  2025.txt  2026.txt
parse/app/: flow.go  utils.go
parse/base/: const.go  data.go  entity.go  utils.go
parse/core/: base.go  const.go  core.go  data.go  flow.go  parse.go  utils.go  utils_test.go
parse/data/: io.go
parse/data/input/: parse.go  utils.go  utils_test.go
parse/data/output/: format.go  utils.go
parse/data/read/: read.go  read_test.go
parse/data/write/: write.go
parse/read/: interface.go  loader.go  parse.go  parse_test.go  read.go
parse/write/: write.go
parser/: Main.hs  Test.hs
parser/Main/: Base.hs  Input.hs  Output.hs
