[project]
name = "chinese-holidays-calendar"
version = "0.0.0"
description = "Chinese holidays calendar crawler and parser"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langsmith~=0.4.23",
    "openai~=1.105.0",
    "python-dateutil~=2.9.0.post0",
    "requests~=2.32.5",
]

[dependency-groups]
dev = [
  "pylint>=3.0.0"
]
